<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMT_Board</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="title_activity_post_show">PostShowActivity</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="boardBuyBtnText">삽니다</string>
    <string name="boardSellBtnText">팝니다</string>
    <string name="boardInquiryBtnText">문의 및 견적의뢰</string>
    <string name="boardSellCompleteBtnText">판매 완료</string>
    <string name="postShowTitle">제목</string>
    <string name="postShowComments">댓글</string>
    <string name="postShowCommentsBtn">댓글 보기</string>
    <string name="showCommentEditTextBtn">댓글 달기</string>
    <string name="addCommentEditTextHint">댓글을 입력해주세요.</string>
    <string name="addCommentSubmitBtnText">확인</string>
    <string name="postShowDescription">내용</string>
    <string name="postShowAuthor">작성자</string>
    <string name="postShowShowPicture">사진 보기</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="create_task">글 쓰기</string>
    <string name="search_task">검색</string>
    <string name="delete_task">글 삭제</string>
    <string name="setting">환경 설정</string>
    <string name="registeration">회원 가입</string>
    <string name="loginIdHint">이메일를 입력해주세요</string>
    <string name="LoginPoasswordHint">패스워드를 입력해주세요</string>
    <string name="addImageBtnText">사진 추가</string>
    <string name="cancel">취소</string>
    <string name="remove">삭제</string>
    <string name="takePic">카메라</string>
    <string name="openGallery">앨범</string>
    <string name="moreTask">더 보기</string>
    <string name="searchEtHint">글 제목 또는 작성자</string>

</resources>