<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/login"
        />
    
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/logout"
        />
    
    <item
        android:id="@+id/action_create_task"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/create_task"
        />
    
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/setting"
        />

</menu>